index login changed

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -9,8 +9,11 @@
             <h1 class="mb-0"><strong class="text-primary">MediBox</strong> Opens 24 Hours</h1>
             <div class="row justify-content-center mb-5">
               <div class="col-lg-6 text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ex perspiciatis non quibusdam
-                  vel quidem.</p>
+                <p>
+                  Helping patients get the medications they need.Some patients require specialty drugs for chronic or
+                  complex conditions. The network specialty pharmacy can dispense these drugs quickly and at a
+                  reasonable cost.
+                </p>
               </div>
             </div>
             <p><a href="/shop"
@@ -29,8 +32,10 @@
             <h1 class="mb-0">New Medicine <strong class="text-primary">Everyday</strong></h1>
             <div class="row justify-content-center mb-5">
               <div class="col-lg-6 text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ex perspiciatis non quibusdam
-                  vel quidem.</p>
+                <p>
+                  We're not a Doctor But we serve humankind, to make sure that they are relieved from pain. We're a
+                  Pharmacist.
+                </p>
               </div>
             </div>
             <p><a href="/shop"
@@ -48,8 +53,8 @@
         <div class="feature">
           <span class="wrap-icon flaticon-24-hours-drugs-delivery"></span>
           <h3><a href="#">Free Delivery</a></h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum voluptates excepturi neque
-            labore .</p>
+          <p>Some patients require specialty drugs for chronic or complex conditions. The network specialty pharmacy can
+            dispense these drugs quickly and at a reasonable cost.</p>
           <p><a href="#"
               class="d-flex align-items-center"><span class="mr-2">Learn more</span> <span
                 class="icon-keyboard_arrow_right"></span></a></p>
@@ -188,18 +193,15 @@
           <h2 class="mb-5">Why <strong class="text-primary">Us</strong></h2>
           <div class="step-number d-flex mb-4">
             <span>1</span>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam
-              tempore</p>
+            <p>With Flexiable Rewards, You can choose the reward cash discount or free goods.</p>
           </div>
           <div class="step-number d-flex mb-4">
             <span>2</span>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam
-              tempore</p>
+            <p>Click to buy a range of products across categories.</p>
           </div>
           <div class="step-number d-flex mb-4">
             <span>3</span>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam
-              tempore</p>
+            <p>We offer convenient home delivery of medicines & general goods.</p>
           </div>
         </div>
       </div>
