--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,12 +10,12 @@
                 </div>
             </div>
             <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-                <h3 class="footer-heading mb-4">Navigation</h3>
+                <h3 class="footer-heading mb-4">Policies</h3>
                 <ul class="list-unstyled">
-                    <li><a href="#">Supplements</a></li>
-                    <li><a href="#">Vitamins</a></li>
-                    <li><a href="#">Diet &amp; Nutrition</a></li>
-                    <li><a href="#">Tea &amp; Coffee</a></li>
+                    <li><a href="#">Refund Policy</a></li>
+                    <li><a href="#">Shipping Policy</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
                 </ul>
             </div>
             <div class="col-md-6 col-lg-3">
