--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -83,9 +83,10 @@
                             </ul>
                         </nav>
                     </div>
-                    <!-- <div class="icons">
-                        <a href="#"
-                            class="icons-btn d-inline-block js-search-open"><span class="icon-search"></span></a>
+                    <div class="icons">
+                        <!-- <a href="#"
+                            class="icons-btn d-inline-block js-search-open"><span class="icon-search"></span>
+                        </a> -->
                         <a href="/cart"
                             class="icons-btn d-inline-block bag">
                             <span class="icon-shopping-bag"></span>
@@ -94,7 +95,7 @@
                         <a href="#"
                             class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span
                                 class="icon-menu"></span></a>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
