--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="h3 mb-5 text-black">Get In Touch</h2>
+        <h2 class="h3 mb-5 text-black">Login</h2>
       </div>
       <div class="col-md-12">
         <form action="#"
