--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -31,7 +31,7 @@
 </div>
 
 
-<div class="site-section py-5"
+<!-- <div class="site-section py-5"
   data-aos="fade">
   <div class="container">
     <div class="row">
@@ -53,9 +53,9 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="site-section bg-light custom-border-bottom"
+<!-- <div class="site-section bg-light custom-border-bottom"
   data-aos="fade">
   <div class="container">
     <div class="row justify-content-center mb-5">
@@ -174,7 +174,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="site-section site-section-sm site-blocks-1 border-0"
   data-aos="fade">
