--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -40,8 +40,7 @@
                 </td>
                 <td>$55.00</td>
                 <td>
-                  <div class="input-group mb-3"
-                    style="max-width: 120px;">
+                  <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <button class="btn btn-outline-primary js-btn-minus"
                         type="button">&minus;</button>
@@ -57,13 +56,11 @@
                         type="button">&plus;</button>
                     </div>
                   </div>
-
                 </td>
                 <td>$49.00</td>
                 <td><a href="#"
                     class="btn btn-primary height-auto btn-sm">X</a></td>
               </tr>
-
               <tr>
                 <td class="product-thumbnail">
                   <img src="images/product_01.png"
@@ -75,8 +72,7 @@
                 </td>
                 <td>$49.00</td>
                 <td>
-                  <div class="input-group mb-3"
-                    style="max-width: 120px;">
+                  <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <button class="btn btn-outline-primary js-btn-minus"
                         type="button">&minus;</button>
@@ -116,7 +112,7 @@
               class="btn btn-outline-primary btn-md btn-block">Continue Shopping</a>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-12">
             <label class="text-black h4"
               for="coupon">Coupon</label>
@@ -131,7 +127,7 @@
           <div class="col-md-4">
             <button class="btn btn-primary btn-md px-4">Apply Coupon</button>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-md-6 pl-5">
         <div class="row justify-content-end">
@@ -161,8 +157,7 @@
             <div class="row">
               <div class="col-md-12">
                 <button class="btn btn-primary btn-lg btn-block"
-                  onclick="window.location='/cart/checkout'">Proceed To
-                  Checkout</button>
+                  onclick="window.location='/cart/checkout'">Checkout</button>
               </div>
             </div>
           </div>
