--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -126,7 +126,7 @@
     </div>
   </div>
 </div>
-<div class="site-section">
+<!-- <div class="site-section">
   <div class="container">
     <div class="row justify-content-between">
       <div class="col-lg-6">
@@ -207,5 +207,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <%- include("./../partials/footer.ejs") %>
