--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -28,8 +28,8 @@
                 <input type="email"
                   class="form-control"
                   id="c_email"
-                  name="c_email"
-                  placeholder="">
+                  name="email"
+                >
               </div>
             </div>
             <div class="form-group row">
@@ -39,7 +39,7 @@
                 <input type="text"
                   class="form-control"
                   id="c_password"
-                  name="c_password">
+                  name="password">
               </div>
             </div>
             <div class="form-group row">
