--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -18,10 +18,8 @@
         <h2 class="h3 mb-5 text-black">Get In Touch</h2>
       </div>
       <div class="col-md-12">
-
-        <form action="#"
+        <form action="/users/register"
           method="post">
-
           <div class="p-3 p-lg-5 border">
             <div class="form-group row">
               <div class="col-md-12">
@@ -30,7 +28,7 @@
                 <input type="text"
                   class="form-control"
                   id="c_fname"
-                  name="c_fname">
+                  name="name">
               </div>
             </div>
             <div class="form-group row">
@@ -40,8 +38,19 @@
                 <input type="email"
                   class="form-control"
                   id="c_email"
-                  name="c_email"
-                  placeholder="">
+                  name="email"
+                  >
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="col-md-12">
+                <label for="number"
+                  class="text-black">Mobile Number <span class="text-danger">*</span></label>
+                <input type="tel"
+                  class="form-control"
+                  id="number"
+                  name="number"
+                  >
               </div>
             </div>
             <div class="form-group row">
@@ -51,7 +60,7 @@
                 <input type="password"
                   class="form-control"
                   id="c_password"
-                  name="c_password">
+                  name="password">
               </div>
             </div>
             <div class="form-group row">
