--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -59,7 +59,7 @@
             target="_blank"
             class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Place Order</a></p>
 
-        <!-- <div class="mt-5">
+        <div class="mt-5">
           <ul class="nav nav-pills mb-3 custom-pill"
             id="pills-tab"
             role="tablist">
@@ -143,7 +143,7 @@
               </table>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
