--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<!-- <div class="py-5">
+<div class="py-5">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="site-section bg-light pt-0">
   <div class="container">
