--- a/views/admin/add_products.ejs
+++ b/views/admin/add_products.ejs
@@ -5,12 +5,12 @@
       height: 100px;
    }
 </style>
-<br /><br />
 <div class="container">
    <h2 class="page-title">
       Add a Product
    </h2>
-   <a href="#" class="btn btn-primary">Back to all product</a>
+   <a href="/admin/products" class="btn btn-primary">Back</a>
+   <div class="mt-3"></div>
    <div class="row">
       <div class="col">
          <form action="" method="post"
@@ -39,17 +39,17 @@
             <!--Dummy Price -->
             <div class="form-group">
                <label>Dummy Price</label>
-               <input type="number"
+               <input type="text"
                   class="form-control"
                   placeholder="Dummy Price"
                   name="dummyPrice"
-                  value="<%=dummyprice%>"
+                  value="<%=dummyPrice%>"
                   required />
             </div>
             <!-- Price -->
             <div class="form-group">
                <label>Price</label>
-               <input type="number"
+               <input type="text"
                   class="form-control"
                   placeholder="Price"
                   name="price"
@@ -65,6 +65,17 @@
                   name="quantity"
                   value="<%=quantity%>"
                   required />
+            </div>
+            <!-- Category -->
+            <div class="form-group">
+               <label>Category</label>
+               <select name="category"
+                  class="form-control">
+                  <option>None</option>
+                  <%categories.forEach(catg=>{%>
+                  <option value="<%=catg.slug%>"><%=catg.title%></option>
+                  <%})%>
+               </select>
             </div>
             <!-- Image Upload-->
             <div class="form-group">
