products goes dynamically in index and shop page

--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -62,15 +62,15 @@
                 </li> -->
                 <li class="nav-item active">
                     <a class="nav-link"
-                        href="/users/common-user">Add Product</a>
+                        href="/admin/products">Add Product</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="">Category</a>
+                        href="/admin/categories">Category</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="/users/common-user">User</a>
+                        href="#">User</a>
                 </li>
             </ul>
         </div>
