--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -51,13 +51,10 @@
           </div>
 
         </div>
-        <p><a href="
-            https://api.whatsapp.com/send?phone=+917303099282&text=Welcome
-            to
-            wonder
-            hack!!"
-            target="_blank"
-            class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Place Order</a></p>
+        <p><a href="/cart"
+            class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Place Order
+          </a>
+        </p>
 
         <div class="mt-5">
           <ul class="nav nav-pills mb-3 custom-pill"
