--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,7 +21,7 @@
       <% products.forEach(function(product,index){%>
       <tr>
         <td><%=product.title%></td>
-        <td><%=product.price%></td>
+        <td>&#8377;<%=product.price%></td>
         <td><%=product.category%></td>
         <td><%=product.quantity%></td>
         <td>
