--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,5 +1,7 @@
 <%- include("./../partials/header.ejs") %>
-
+<div class="container">
+  <%- include("./../partials/messages.ejs")%>
+</div>
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
