--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -8,7 +8,7 @@
     </div>
   </div>
 </div>
-
+<!-- 
 <div class="py-5">
   <div class="container">
     <div class="row">
@@ -45,19 +45,25 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="site-section bg-light pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-lg-4 text-center item mb-4 item-v2">
-        <span class="onsale">Sale</span>
-        <a href="/shop-single"> <img src="images/product_01.png"
-            alt="Image"></a>
-        <h3 class="text-dark"><a href="shop-single.html">Bioderma</a></h3>
-        <p class="price"><del>95.00</del> &mdash; $55.00</p>
-      </div>
-      <div class="col-sm-6 col-lg-4 text-center item mb-4 item-v2">
+      <%if(products){%>
+        <%products.forEach(product=>{%>
+          <div class="col-sm-6 col-lg-4 text-center item mb-4 item-v2">
+            <!-- <span class="onsale">Sale</span> -->
+            <a href="/shop-single"> <img src="/uploads/<%=product.avatar%>"
+                alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html"><%=product.title%></a></h3>
+            <p class="price"><del>&#8377;<%=product.dummyPrice%></del> &mdash; &#8377;<%=product.price%></p>
+          </div>
+        <%})%>
+      <%}else{%>
+        <h1 style="text-align: center;">No Product</h1>
+      <%}%>
+      <!-- <div class="col-sm-6 col-lg-4 text-center item mb-4 item-v2">
         <a href="/shop-single"> <img src="images/product_02.png"
             alt="Image"></a>
         <h3 class="text-dark"><a href="shop-single.html">Chanca Piedra</a></h3>
@@ -125,7 +131,7 @@
             alt="Image"></a>
         <h3 class="text-dark"><a href="shop-single.html">Poo Pourri</a></h3>
         <p class="price"><del>$89</del> &mdash; $38.00</p>
-      </div>
+      </div> -->
     </div>
     <!-- <div class="row mt-5">
           <div class="col-md-12 text-center">
