--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,7 +84,7 @@
                                             <% } %>><a href="/login">Login</a></li>
                                     <%}%>
                                     <% if (user && user.admin == 1) { %>
-                                        <li><a href="/admin/">Admin Area</a></li>
+                                        <li><a href="/admin">Admin Area</a></li>
                                     <%}%>
                                 
                             </ul>
