--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -93,126 +93,23 @@
       </div>
     </div>
     <div class="row">
-      
       <div class="col-md-12 block-3 products-wrap">
         <div class="nonloop-block-3 owl-carousel">
           <%if(products){%>
             <%products.forEach(product=>{%>
               <div class="text-center item mb-4 item-v2">
-                <a href="/shop-single"> <img src="/uploads/<%=product.avatar%>"
+                <a href="/shop-single/<%=product.slug%>/<%=product._id%>"> <img src="/uploads/<%=product.avatar%>"
                     alt="Image"></a>
-                <h3 class="text-dark"><a href="/shop-single"><%=product.title%></a></h3>
+                <h3 class="text-dark"><a href="/shop-single/<%=product.slug%>/<%=product._id%>"><%=product.title%></a></h3>
                 <p class="price">&#8377;<%=product.price%></p>
               </div>
             <%})%>
           <%}else{%>
             <h1 style="text-align: center;">No product</h1>
           <%}%>
-          
-          <!-- <div class="text-center item mb-4 item-v2">
-            <a href="/shop-single"> <img src="images/product_01.png"
-                alt="Image"></a>
-            <h3 class="text-dark"><a href="/shop-single">Umcka Cold Care</a></h3>
-            <p class="price">$120.00</p>
-          </div> -->
-          <!-- <div class="text-center item mb-4 item-v2">
-            <span class="onsale">Sale</span>
-            <a href="/shop-single"> <img src="images/product_02.png"
-                alt="Image"></a>
-            <h3 class="text-dark"><a href="/shop-single">Umcka Cold Care</a></h3>
-            <p class="price">$120.00</p>
-          </div> -->
-          <!-- <div class="text-center item mb-4 item-v2">
-            <a href="/shop-single"> <img src="images/product_04.png"
-                alt="Image"></a>
-            <h3 class="text-dark"><a href="/shop-single">Umcka Cold Care</a></h3>
-            <p class="price">$120.00</p>
-          </div> -->
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- <div class="site-section">
-  <div class="container">
-    <div class="row justify-content-between">
-      <div class="col-lg-6">
-        <div class="title-section">
-          <h2>Happy <strong class="text-primary">Customers</strong></h2>
-        </div>
-        <div class="block-3 products-wrap">
-          <div class="owl-single no-direction owl-carousel">
-            <div class="testimony">
-              <blockquote>
-                <img src="images/person_1.jpg"
-                  alt="Image"
-                  class="img-fluid">
-                <p>&ldquo;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem
-                  consectetur quam tempore obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod
-                  tenetur ducimus. Minus ratione sit quaerat unde.&rdquo;</p>
-              </blockquote>
-              <p class="author">&mdash; Kelly Holmes</p>
-            </div>
-            <div class="testimony">
-              <blockquote>
-                <img src="images/person_2.jpg"
-                  alt="Image"
-                  class="img-fluid">
-                <p>&ldquo;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem
-                  consectetur quam tempore
-                  obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus
-                  ratione sit quaerat
-                  unde.&rdquo;</p>
-              </blockquote>
-              <p class="author">&mdash; Rebecca Morando</p>
-            </div>
-            <div class="testimony">
-              <blockquote>
-                <img src="images/person_3.jpg"
-                  alt="Image"
-                  class="img-fluid">
-                <p>&ldquo;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem
-                  consectetur quam tempore
-                  obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus
-                  ratione sit quaerat
-                  unde.&rdquo;</p>
-              </blockquote>
-              <p class="author">&mdash; Lucas Gallone</p>
-            </div>
-            <div class="testimony">
-              <blockquote>
-                <img src="images/person_4.jpg"
-                  alt="Image"
-                  class="img-fluid">
-                <p>&ldquo;Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem
-                  consectetur quam tempore
-                  obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus
-                  ratione sit quaerat
-                  unde.&rdquo;</p>
-              </blockquote>
-              <p class="author">&mdash; Andrew Neel</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-5">
-        <div class="title-section">
-          <h2 class="mb-5">Why <strong class="text-primary">Us</strong></h2>
-          <div class="step-number d-flex mb-4">
-            <span>1</span>
-            <p>With Flexiable Rewards, You can choose the reward cash discount or free goods.</p>
-          </div>
-          <div class="step-number d-flex mb-4">
-            <span>2</span>
-            <p>Click to buy a range of products across categories.</p>
-          </div>
-          <div class="step-number d-flex mb-4">
-            <span>3</span>
-            <p>We offer convenient home delivery of medicines & general goods.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
 <%- include("./../partials/footer.ejs") %>
