--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -1,10 +1,12 @@
 <%- include("./../partials/header.ejs") %>
+<div class="container">
+  <%- include("./../partials/messages.ejs")%>
+</div>
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <a
-          href="shop.html">Store</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Ibuprofen Tablets,
-          200mg</strong></div>
+      <div class="col-md-12 mb-0"><a href="/">Home</a> <span class="mx-2 mb-0">/</span> <a
+          href="/shop">Store</a> <span class="mx-2 mb-0">/</span> <strong class="text-black"><%=product.title%></strong></div>
     </div>
   </div>
 </div>
@@ -14,45 +16,38 @@
     <div class="row">
       <div class="col-md-5 mr-auto">
         <div class="border text-center">
-          <img src="images/product_07_large.png"
-            alt="Image"
+          <img src="/uploads/<%=product.avatar%>"
+            alt="<%=product.avatar%>"
             class="img-fluid p-5">
         </div>
       </div>
       <div class="col-md-6">
-        <h2 class="text-black">Ibuprofen Tablets, 200mg</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, vitae, explicabo? Incidunt facere,
-          natus
-          soluta dolores iusto! Molestiae expedita veritatis nesciunt doloremque sint asperiores fuga voluptas,
-          distinctio, aperiam, ratione dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quos
-          architecto nisi voluptatibus eum aperiam doloremque commodi nesciunt quaerat, eos suscipit reiciendis eius
-          voluptas. Dicta magni eos esse ipsam! Alias.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam rem, excepturi facere fuga minima deleniti ullam
-          nemo tempora ipsa dicta, est repellendus? Accusantium, voluptatem nihil excepturi ullam architecto iste id?
+        <h2 class="text-black"><%=product.title%></h2>
+        <p><%-product.desc%>
         </p>
-        <p><del>$95.00</del> <strong class="text-primary h4">$55.00</strong></p>
+        <p><del>Rs.<%=product.dummyPrice%></del> <strong class="text-primary h4">Rs.<%=product.price%></strong></p>
         <div class="mb-5">
           <div class="input-group mb-3"
             style="max-width: 220px;">
-            <div class="input-group-prepend">
+            <!-- <div class="input-group-prepend">
               <button class="btn btn-outline-primary js-btn-minus"
                 type="button">&minus;</button>
-            </div>
-            <input type="text"
+            </div> -->
+            <!-- <input type="text"
               class="form-control text-center"
               value="1"
               placeholder=""
               aria-label="Example text with button addon"
-              aria-describedby="button-addon1">
-            <div class="input-group-append">
+              aria-describedby="button-addon1"> -->
+            <!-- <div class="input-group-append">
               <button class="btn btn-outline-primary js-btn-plus"
                 type="button">&plus;</button>
-            </div>
+            </div> -->
           </div>
 
         </div>
-        <p><a href="/cart"
-            class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Place Order
+        <p><a href="/cart/add/<%=product._id%>"
+            class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Add to Cart
           </a>
         </p>
 
